<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ISACalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="thr">3</string>
    <string name="fr">4</string>
    <string name="fv">5</string>
    <string name="sx">6</string>
    <string name="svn">7</string>
    <string name="et">8</string>
    <string name="nn">9</string>
    <string name="zr">0</string>
    <string name="clear">C</string>
	<string name="add">+</string>
	<string name="sub">-</string>
	<string name="mul">*</string>
	<string name="div">/</string>

</resources>
